--- a/index.html
+++ b/index.html
@@ -1,47 +1,43 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Liang tianhui's Personal Homepage</title>
-  </head>
-  <body>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>我的网页</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <header>
-      <h1>Welcome to John Doe's Personal Homepage</h1>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
+        <h1>欢迎来到我的网页</h1>
     </header>
-    <main>
-      <section>
-        <h2>About Me</h2>
-        <p>Hi, I'm John Doe, and this is my personal homepage. I'm a [your profession] and I enjoy [your hobbies].</p>
-      </section>
-      <section>
-        <h2>My Projects</h2>
+    <nav>
         <ul>
-          <li><a href="#">Project 1</a></li>
-          <li><a href="#">Project 2</a></li>
-          <li><a href="#">Project 3</a></li>
+            <li><a href="#home">首页</a></li>
+            <li><a href="#about">关于我们</a></li>
+            <li><a href="#services">服务</a></li>
+            <li><a href="#contact">联系我们</a></li>
         </ul>
-      </section>
-      <section>
-        <h2>Contact Me</h2>
-        <form>
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name"><br>
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email"><br>
-          <label for="message">Message:</label>
-          <textarea id="message" name="message"></textarea><br>
-          <input type="submit" value="Submit">
-        </form>
-      </section>
+    </nav>
+    <main>
+        <section id="home">
+            <h2>首页</h2>
+            <p>这是首页的内容。</p>
+        </section>
+        <section id="about">
+            <h2>关于我们</h2>
+            <p>这是关于我们的内容。</p>
+        </section>
+        <section id="services">
+            <h2>服务</h2>
+            <p>这是我们的服务内容。</p>
+        </section>
+        <section id="contact">
+            <h2>联系我们</h2>
+            <p>这是联系我们的内容。</p>
+        </section>
     </main>
     <footer>
-      <p>&copy; 2023 John Doe's Personal Homepage</p>
+        <p>&copy; 2023 我的网页. 版权所有.</p>
     </footer>
-  </body>
+</body>
 </html>
