--- a/index.html
+++ b/index.html
@@ -1,51 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Personal Website</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <header>
-    <h1>Welcome!</h1>
-    <h2>我的个人主页</h2>
-    <nav>
-      <ul>
-        <li><a href=" ">首页</a ></li>
-        <li><a href="#hobbies">我的爱好</a ></li>
-        <li><a href="#logs">我的日志</a ></li>
-        <li><a href="#contact">联系我们</a ></li>
-        <li><a href="#about">关于我</a ></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section id="about">
-      <h2>关于我</h2>
-      <p>性别:女</p >
-      <p>年龄:20</p >
-      <p>专业:新闻学专业</p >
-      <p>我是一个乐观开朗向上的人，虽然偶尔焦虑但都能很快调节好情绪。日常生活中我喜欢旅游、读书和看电影以及动漫，在没事的时候我喜欢宅在家里做自己喜欢做的事情，有一点拖延症，期末之前总是要赶ddl，在日常忙碌的生活中喜欢用逛街和吃饭这种方式放松自己。</p >
-    </section>
-    <section id="hobbies">
-      <h2>我的爱好</h2>
-      <p>我有很多兴趣爱好，其中之一是旅游。我喜欢去各种地方旅游，看祖国的大好河山，旅游不仅能够开阔视野，还能让我解放压力和放松心情。另外，我对摄影和绘画也非常感兴趣，我喜欢拍摄，记录身边的美好，拍摄成照片可以让我更好的保存这份美好。除此之外，阅读也是我生活中的一部分，我喜欢阅读各种类型的书，包括小说、历史、科学和心理学等，阅读不仅丰富了我的知识，还帮助我培养了思考和理解能力。</p >
-    </section>
-    <section id="logs">
-      <h2>我的日志</h2>
-      <p>这里可以添加日志内容（待补充）</p >
-    </section>
-    <section id="contact">
-      <h2>联系我们</h2>
-      <p>这里可以添加联系信息（待补充）</p >
-    </section>
-  </main>
-  <footer>
-    <p>版权所有 &copy; 20XX - 20XX [你的名字]</p >
-  </footer>
-</body>
-
+<html>
+  <head>
+    <title>John Doe's Personal Homepage</title>
+  </head>
+  <body>
+    <header>
+      <h1>Welcome to John Doe's Personal Homepage</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2>About Me</h2>
+        <p>Hi, I'm John Doe, and this is my personal homepage. I'm a [your profession] and I enjoy [your hobbies].</p>
+      </section>
+      <section>
+        <h2>My Projects</h2>
+        <ul>
+          <li><a href="#">Project 1</a></li>
+          <li><a href="#">Project 2</a></li>
+          <li><a href="#">Project 3</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Contact Me</h2>
+        <form>
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name"><br>
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email"><br>
+          <label for="message">Message:</label>
+          <textarea id="message" name="message"></textarea><br>
+          <input type="submit" value="Submit">
+        </form>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2023 John Doe's Personal Homepage</p>
+    </footer>
+  </body>
 </html>
