--- a/index.html
+++ b/index.html
@@ -1,47 +1,116 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>John Doe's Personal Homepage</title>
-  </head>
-  <body>
-    <header>
-      <h1>Welcome to John Doe's Personal Homepage</h1>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section>
+    <style>
+        /* 全局样式 */
+        body {
+            font-family: Arial, sans-serif; /* 修改字体样式 */
+            background-color: #f4f4f4; /* 设置背景颜色 */
+            margin: 0;
+            padding: 0;
+        }
+
+        /* 头部样式 */
+        header {
+            background-color: #333; /* 设置头部背景颜色 */
+            color: white; /* 设置头部文字颜色 */
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        header nav ul {
+            list-style-type: none; /* 移除列表项标记 */
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center; /* 水平居中 */
+        }
+
+        header nav ul li {
+            margin: 0 15px; /* 设置列表项间距 */
+        }
+
+        header nav ul li a {
+            color: white; /* 设置链接颜色 */
+            text-decoration: none; /* 移除下划线 */
+        }
+
+        /* 主要内容区域样式 */
+        main {
+            padding: 20px;
+        }
+
+        /* 各个部分的标题样式 */
+        section h2 {
+            color: #333; /* 设置标题颜色 */
+            border-bottom: 2px solid #333; /* 添加下边框 */
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
+
+        /* 表单样式 */
+        form label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        form input[type="text"],
+        form input[type="email"],
+        form textarea {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        form input[type="submit"] {
+            background-color: #333; /* 设置按钮背景颜色 */
+            color: white; /* 设置按钮文字颜色 */
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        form input[type="submit"]:hover {
+            background-color: #555; /* 设置按钮悬停时的背景颜色 */
+        }
+
+        /* 页脚样式 */
+        footer {
+            background-color: #333; /* 设置页脚背景颜色 */
+            color: white; /* 设置页脚文字颜色 */
+            text-align: center;
+            padding: 10px 0;
+            position: fixed; /* 固定页脚位置 */
+            width: 100%;
+            bottom: 0;
+        }
+
+        /* 插入图片样式（假设在About Me部分插入图片） */
+        section#about img {
+            max-width: 100%; /* 图片宽度自适应 */
+            height: auto; /* 图片高度自动调整以保持比例 */
+            display: block; /* 移除图片底部间隙 */
+            margin: 0 auto; /* 图片水平居中 */
+            border-radius: 8px; /* 添加圆角 */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 添加阴影效果 */
+        }
+    </style>
+</head>
+<body>
+    <!-- 网页内容，与之前相同 -->
+
+    <!-- 在About Me部分插入图片（示例） -->
+    <section id="about">
         <h2>About Me</h2>
+        <img class=" long-press-able-img " src="your-image-url.jpg" alt="A picture of John Doe"> <!-- 替换为你的图片URL -->
         <p>Hi, I'm John Doe, and this is my personal homepage. I'm a [your profession] and I enjoy [your hobbies].</p>
-      </section>
-      <section>
-        <h2>My Projects</h2>
-        <ul>
-          <li><a href="#">Project 1</a></li>
-          <li><a href="#">Project 2</a></li>
-          <li><a href="#">Project 3</a></li>
-        </ul>
-      </section>
-      <section>
-        <h2>Contact Me</h2>
-        <form>
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name"><br>
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email"><br>
-          <label for="message">Message:</label>
-          <textarea id="message" name="message"></textarea><br>
-          <input type="submit" value="Submit">
-        </form>
-      </section>
-    </main>
-    <footer>
-      <p>&copy; 2023 John Doe's Personal Homepage</p>
-    </footer>
-  </body>
+    </section>
+
+    <!-- 其他内容，与之前相同 -->
+
+</body>
 </html>
