--- a/index.html
+++ b/index.html
@@ -9,12 +9,31 @@
      <body>
          <header>
              <h1>欢迎来到我的个人网页</h1>
+             <img class=" long-press-able-img " class=" long-press-able-img " src="https://example.com/your-profile-picture.jpg" alt="我的照片" class="profile-picture">
          </header>
          <main>
-             <p>这是我的第一个GitHub Pages网站！</p>
+             <section>
+                 <h2>自我介绍</h2>
+                 <p>你好，我是[你的名字]，一个热爱编程和设计的开发者。我热衷于使用技术解决实际问题，并喜欢分享我的学习经验和项目。</p>
+             </section>
+             <section>
+                 <h2>我的作品</h2>
+                 <ul>
+                     <li><a href="https://example.com/your-project1" target="_blank">项目1</a> - 描述项目1的内容</li>
+                     <li><a href="https://example.com/your-project2" target="_blank">项目2</a> - 描述项目2的内容</li>
+                 </ul>
+             </section>
+             <section>
+                 <h2>联系我</h2>
+                 <p>你可以通过以下方式联系我：</p>
+                 <ul>
+                     <li>邮箱：<a href="mailto:your-email@example.com">your-email@example.com</a></li>
+                     <li>GitHub：<a href="https://github.com/yourusername" target="_blank">@yourusername</a></li>
+                 </ul>
+             </section>
          </main>
          <footer>
-             <p>&copy; 2023 我的名字</p>
+             <p>&copy; 2023 [你的名字]. 保留所有权利。</p>
          </footer>
      </body>
      </html>
