--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      </head>
      <body>
          <header>
-             <h1>欢迎来到我的个人网页</h1>
+             <h1>Welcome!</h1>
              <img class=" long-press-able-img " class=" long-press-able-img " src="https://example.com/your-profile-picture.jpg" alt="我的照片" class="profile-picture">
          </header>
          <main>
