--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <body>
          <header>
              <h1>欢迎来到我的个人网页</h1>
-             <img class=" long-press-able-img " src="https://example.com/your-profile-picture.jpg" alt="我的照片" class="profile-picture">
+             <img src="intj.jpg" alt="my picture">
          </header>
          <main>
              <section>
