--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
              <section>
                  <h2>我的作品</h2>
                  <ul>
+    <div class="photo-row">
+        < img src="intj.jpg" alt="">
+        < img src="momo.jpg" alt="">
+    </div>
+</section>
                      <li><a href="https://example.com/your-project1" target="_blank">项目1</a> - 描述项目1的内容</li>
                      <li><a href="https://example.com/your-project2" target="_blank">项目2</a> - 描述项目2的内容</li>
                  </ul>
