--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <p>Welcome to my page! I'm Liang Tianhui, originally from Shandong Province. Born under the Capricorn sign in January 2001, I'm an INTJ who's working hard to soften my 'J' tendencies. Currently, I'm enrolled in the MSCCT+ program at Lingnan University in Hong Kong.</p >
         </section>
         <section>
-            <h2>我的作品</h2>
-            <div class="photo-row">
-                < img src="intj.jpg" alt="">
-                < img src="momo.jpg" alt="">
+            <h2>Personal Label</h2>
+             <div class="photo-row">
+        <img src="intj.jpg" alt="图片1描述">
+        <img src="momo.jpg" alt="图片2描述">
             </div>
             <ul>
                 <li>项目1 - 描述项目1的内容</li>
