--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>欢迎来到我的个人网页</h1>
-        < img src="intj.jpg" alt="my picture">
+        < img src="momo.jpg" alt="my picture">
     </header>
     <main>
         <section>
