--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的个人网页</title>
+    <title>LiangTianhui's personal page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h1>欢迎来到我的个人网页</h1>
+        <h1>Welcome!</h1>
         <img src="momo.jpg" alt="my picture"/>
     </header>
     <main>
         <section>
             <h2>自我介绍</h2>
-            <p>Welcome to my page! I'm Liang Tianhui, originally from Shandong Province. Born under the Capricorn sign in January 2001, I'm an INTJ who's working hard to soften my 'J' tendencies. Currently, I'm enrolled in the MSCCT+ program at Lingnan University in Hong Kong.</p >
+            <p>Welcome to my page!
+                I'm Liang Tianhui, originally from Shandong Province. Born under the Capricorn sign in January 2001, I'm an INTJ who's working hard to soften my 'J' tendencies. Currently, I'm enrolled in the MSCCT+ program at Lingnan University in Hong Kong.</p >
         </section>
         <section>
             <h2>Personal Label</h2>
