--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <header>
         <h1>Welcome!</h1>
-        <img src="momo.jpg" alt="my picture"/>
+        <img src="hi.jpg" alt="my picture"/>
     </header>
     <main>
         <section>
             <h2>自我介绍</h2>
-            <p>Welcome to my page!
+            <p>     Welcome to my page!
                 I'm Liang Tianhui, originally from Shandong Province. Born under the Capricorn sign in January 2001, I'm an INTJ who's working hard to soften my 'J' tendencies. Currently, I'm enrolled in the MSCCT+ program at Lingnan University in Hong Kong.
                 
                 I have a wide range of hobbies, but none of them are mastered.😅 These hobbies include but are not limited to taking eight piano lessons, learning cello for one summer vacation, studying calligraphy for half a month, and taking only one swimming lesson (but this is because the gym owner 跑路). However, my love for singer Shang Wenjie is long-lasting. 🥰Just as my username is "ShangWenjiedegou", I hope everyone can support singer Shang Wenjie a lot!Thank you！</p >
@@ -25,7 +25,8 @@
             <h2>Personal Label</h2>
              <div class="photo-row">
         <img src="intj.jpg" alt="图片1描述">
-        <img src="momo.jpg" alt="图片2描述">
+        <img src="mojie.jpg" alt="图片2描述">
+        <img src="jiesi.jpg" alt="图片2描述">
             </div>
             <ul>
                 <li>项目1 - 描述项目1的内容</li>
