--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
              <div class="photo-row">
         <img src="intj.jpg" alt="图片1描述">
         <img src="mojie.jpg" alt="图片2描述">
-        <img src="jiesi.jpg" alt="图片2描述">
+        <img src="jiesi.jpg" alt="图片3描述">
+        <img src="sfz.jpg" alt="图片4描述">
+        <img src="gym.jpg" alt="图片5描述">            
             </div>
             <ul>
                 <li>项目1 - 描述项目1的内容</li>
