--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Welcome!</h1>
-        <img src="hi.jpg" alt="my picture"/>
+        <img src="hi.JPG" alt="my picture"/>
     </header>
     <main>
         <section>
@@ -25,7 +25,7 @@
             <h2>Personal Label</h2>
              <div class="photo-row">
         <img src="intj.jpg" alt="图片1描述">
-        <img src="mojie.jpg" alt="图片2描述">
+        <img src="mojie.JPG" alt="图片2描述">
         <img src="jiesi.jpg" alt="图片3描述">
         <img src="sfz.jpg" alt="图片4描述">
         <img src="gym.jpg" alt="图片5描述">            
