--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="intj.jpg" alt="图片1描述">
         <img src="mojie.JPG" alt="图片2描述">
         <img src="jiesi.jpg" alt="图片3描述">
-        <img src="sfz.jpg" alt="图片4描述">
+        <img src="3fz.jpg" alt="图片4描述">
         <img src="gym.jpg" alt="图片5描述">            
             </div>
             <ul>
