--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <section>
             <h2>Personal Label</h2>
              <div class="photo-row">
-        <img src="intj.jpg" alt="图片1描述">
-        <img src="mojie.JPG" alt="图片2描述">
-        <img src="jiesi.jpg" alt="图片3描述">
-        <img src="3fz.jpg" alt="图片4描述">
+        <img src="intj.jpg" alt="#intj">
+        <img src="mojie.JPG" alt="摩羯座">
+        <img src="jiesi.jpg" alt="尚雯婕粉丝">
+        <img src="3fz.jpg" alt="三分钟热度选手">
         <img src="gym.jpg" alt="图片5描述">            
             </div>
             <ul>
-                <li>项目1 - 描述项目1的内容</li>
+                <li>#intj</li>
                 <li> - 描述项目2的内容</li>
             </ul>
         </section>
@@ -39,13 +39,13 @@
             <h2>联系我</h2>
             <p>你可以通过以下方式联系我：</p >
             <ul>
-                <li>邮箱：</li>
+                <li>邮箱：3013055061@qq.com</li>
                 <li>GitHub：</li>
             </ul>
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 [你的名字]. 保留所有权利。</p >
+        <p>&copy; 2024 [LiangTianhui]. 保留所有权利。</p >
     </footer>
 </body>
 
