--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </header>
     <main>
         <section>
-            <h2>自我介绍</h2>
-            <p>     Welcome to my page!
+            <h2>Self Introduction</h2>
+            <p>     Welcome to my page!🥳
                 I'm Liang Tianhui, originally from Shandong Province. Born under the Capricorn sign in January 2001, I'm an INTJ who's working hard to soften my 'J' tendencies. Currently, I'm enrolled in the MSCCT+ program at Lingnan University in Hong Kong.
                 
                 I have a wide range of hobbies, but none of them are mastered.😅 These hobbies include but are not limited to taking eight piano lessons, learning cello for one summer vacation, studying calligraphy for half a month, and taking only one swimming lesson (but this is because the gym owner 跑路). However, my love for singer Shang Wenjie is long-lasting. 🥰Just as my username is "ShangWenjiedegou", I hope everyone can support singer Shang Wenjie a lot!Thank you！</p >
@@ -31,16 +31,19 @@
         <img src="gym.jpg" alt="图片5描述">            
             </div>
             <ul>
-                <li>#intj</li>
-                <li> - 描述项目2的内容</li>
+                <li>#平静的癫子intj</li>
+                <li>#摩羯去死小组的摩羯</li>
+                <li>#爱上尚雯婕像呼吸一样简单</li>
+                <li>#三分钟热度选手</li>
+                <li>#健身混子 动作是不标准的 力量是上不去的 食欲是越来越好的</li>
             </ul>
         </section>
         <section>
-            <h2>联系我</h2>
-            <p>你可以通过以下方式联系我：</p >
+            <h2>Contact Me</h2>
+            <p>You can contact me in the following ways, but it's better not to contact：</p >
             <ul>
-                <li>邮箱：3013055061@qq.com</li>
-                <li>GitHub：</li>
+                <li>Email：3013055061@qq.com</li>
+                <li>GitHub：shangwenjiedegou</li>
             </ul>
         </section>
     </main>
