--- a/index.html
+++ b/index.html
@@ -11,27 +11,26 @@
 <body>
     <header>
         <h1>Welcome!</h1>
-        <img src="hi.JPG" alt="my picture"/>
+        < img src="hi.JPG" class="profile-picture" alt="my picture"/>
     </header>
     <main>
         <section>
             <h2>Self Introduction</h2>
-            <p>     Welcome to my page!🥳
-                I'm Liang Tianhui, originally from Shandong Province. Born under the Capricorn sign in January 2001, I'm an INTJ who's working hard to soften my 'J' tendencies. Currently, I'm enrolled in the MSCCT+ program at Lingnan University in Hong Kong.
-                
-                I have a wide range of hobbies, but none of them are mastered.😅 These hobbies include but are not limited to taking eight piano lessons, learning cello for one summer vacation, studying calligraphy for half a month, and taking only one swimming lesson (but this is because the gym owner 跑路). However, my love for singer Shang Wenjie is long-lasting. 🥰Just as my username is "ShangWenjiedegou", I hope everyone can support singer Shang Wenjie a lot!Thank you！</p >
+            <p class="intro-text">     Welcome to my page!🥳
+                I'm Liang Tianhui, originally from Shandong Province. Born under the Capricorn sign in January 2001, I'm an INTJ who's working hard to soften my 'J' tendencies. Currently, I'm enrolled in the MSCCT+ program at Lingnan University in Hong Kong.</p >
+            <p class="intro-text">I have a wide range of hobbies, but none of them are mastered. These hobbies include but are not limited to taking eight piano lessons, learning cello for one summer vacation, studying calligraphy for half a month, and taking only one swimming lesson (but this is because the gym owner 跑路). However, my love for singer Shang Wenjie is long-lasting. Just as my username is "ShangWenjiedegou", I hope everyone can support singer Shang Wenjie a lot!Thank you！</p >
         </section>
         <section>
             <h2>Personal Label</h2>
-             <div class="photo-row">
-        <img src="intj.jpg" alt="#intj">
-        <img src="mojie.JPG" alt="摩羯座">
-        <img src="jiesi.jpg" alt="尚雯婕粉丝">
-        <img src="3fz.jpg" alt="三分钟热度选手">
-        <img src="gym.jpg" alt="图片5描述">            
+            <div class="photo-row">
+                < img src="intj.jpg" alt="#intj">
+                < img src="mojie.JPG" alt="摩羯座">
+                < img src="jiesi.jpg" alt="尚雯婕粉丝">
+                < img src="3fz.jpg" alt="三分钟热度选手">
+                < img src="gym.jpg" alt="图片5描述">
             </div>
             <ul>
-                <li>#平静的癫子intj</li>
+                <li>#平静的癫子 intj</li>
                 <li>#摩羯去死小组的摩羯</li>
                 <li>#爱上尚雯婕像呼吸一样简单</li>
                 <li>#三分钟热度选手</li>
