--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 <body>
     <header>
         <h1>Welcome!</h1>
-        <img src="hi.JPG" 
-class="left-image" alt="New Image"/>
     </header>
     <main>
         <section>
             <h2>Self Introduction</h2>
+            <img src="hi.JPG" class="intro-image" alt="Introduction Image"/>
             <p class="intro-paragraph">     Welcome to my page!🥳</p>
             <p class="intro-paragraph">I'm Liang Tianhui, originally from Shandong Province.</p>
             <p class="intro-paragraph">Born under the Capricorn sign in January 2001, I'm an INTJ who's working hard to soften my 'J' tendencies.</p>
