--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
         <section>
             <h2>Self Introduction</h2>
             <img src="hi.JPG" class="intro-image" alt="Introduction Image"/>
-            <p class="intro-paragraph">     Welcome to my page!🥳</p>
-            <p class="intro-paragraph">I'm Liang Tianhui, originally from Shandong Province.</p>
-            <p class="intro-paragraph">Born under the Capricorn sign in January 2001, I'm an INTJ who's working hard to soften my 'J' tendencies.</p>
-            <p class="intro-paragraph">Currently, I'm enrolled in the MSCCT+ program at Lingnan University in Hong Kong.</p>
-            <p class="intro-paragraph">I have a wide range of hobbies, but none of them are mastered. These hobbies include but are not limited to taking eight piano lessons, learning cello for one summer vacation, studying calligraphy for half a month, and taking only one swimming lesson (but this is because the gym owner 跑路). However, my love for singer Shang Wenjie is long-lasting. Just as my username is "ShangWenjiedegou", I hope everyone can support singer Shang Wenjie a lot!Thank you！</p>
+            <p class="intro-paragraph">     Welcome to my page!🎉🎉🎉</p>
+            <p class="intro-paragraph">I'm Liang Tianhui, originally from Shandong Province.Born under the Capricorn ♑️ sign in January 2001, I'm an INTJ who's working hard to soften my 'J' tendencies.Currently, I'm enrolled in the MSCCT+ program at Lingnan University in Hong Kong。</p>
+            <p class="intro-paragraph">I have a wide range of hobbies, but none of them are mastered😅. These hobbies include but are not limited to taking eight piano 🎹 lessons, learning cello 🎻for one summer vacation, studying calligraphy for half a month, and taking only one swimming lesson (but this is because the gym owner 跑路). However, my love 🥰for singer Shang Wenjie is long-lasting. Just as my username is "ShangWenjiedegou", I hope everyone can support singer Shang Wenjie a lot!Thank you！</p>
         </section>
         <section>
             <h2>Personal Label</h2>
