--- a/index.html
+++ b/index.html
@@ -11,26 +11,23 @@
 <body>
     <header>
         <h1>Welcome!</h1>
-        < img src="hi.JPG" 
-class="left-image" alt="New Image"/>
     </header>
     <main>
         <section>
             <h2>Self Introduction</h2>
-            <p class="intro-paragraph">     Welcome to my page!🥳</p >
-            <p class="intro-paragraph">I'm Liang Tianhui, originally from Shandong Province.</p >
-            <p class="intro-paragraph">Born under the Capricorn sign in January 2001, I'm an INTJ who's working hard to soften my 'J' tendencies.</p >
-            <p class="intro-paragraph">Currently, I'm enrolled in the MSCCT+ program at Lingnan University in Hong Kong.</p >
-            <p class="intro-paragraph">I have a wide range of hobbies, but none of them are mastered. These hobbies include but are not limited to taking eight piano lessons, learning cello for one summer vacation, studying calligraphy for half a month, and taking only one swimming lesson (but this is because the gym owner 跑路). However, my love for singer Shang Wenjie is long-lasting. Just as my username is "ShangWenjiedegou", I hope everyone can support singer Shang Wenjie a lot!Thank you！</p >
+            <img src="hi.JPG" class="intro-image" alt="Introduction Image"/>
+            <p class="intro-paragraph">     Welcome to my page!🥳</p>
+            <p class="intro-paragraph">I'm Liang Tianhui, originally from Shandong Province.Born under the Capricorn sign in January 2001, I'm an INTJ who's working hard to soften my 'J' tendencies.Currently, I'm enrolled in the MSCCT+ program at Lingnan University in Hong Kong.</p>
+            <p class="intro-paragraph">I have a wide range of hobbies, but none of them are mastered. These hobbies include but are not limited to taking eight piano lessons, learning cello for one summer vacation, studying calligraphy for half a month, and taking only one swimming lesson (but this is because the gym owner 跑路). However, my love for singer Shang Wenjie is long-lasting. Just as my username is "ShangWenjiedegou", I hope everyone can support singer Shang Wenjie a lot!Thank you！</p>
         </section>
         <section>
             <h2>Personal Label</h2>
             <div class="photo-row">
-                < img src="intj.jpg" alt="#intj">
-                < img src="mojie.JPG" alt="摩羯座">
-                < img src="jiesi.jpg" alt="尚雯婕粉丝">
-                < img src="3fz.jpg" alt="三分钟热度选手">
-                < img src="gym.jpg" alt="图片5描述">
+                <img src="intj.jpg" alt="#intj">
+                <img src="mojie.JPG" alt="摩羯座">
+                <img src="jiesi.jpg" alt="尚雯婕粉丝">
+                <img src="3fz.jpg" alt="三分钟热度选手">
+                <img src="gym.jpg" alt="图片5描述">
             </div>
             <ul>
                 <li>#平静的癫子 intj</li>
@@ -42,7 +39,7 @@ class="left-image" alt="New Image"/>
         </section>
         <section>
             <h2>Contact Me</h2>
-            <p>You can contact me in the following ways, but it's better not to contact：</p >
+            <p>You can contact me in the following ways, but it's better not to contact：</p>
             <ul>
                 <li>Email：3013055061@qq.com</li>
                 <li>GitHub：shangwenjiedegou</li>
@@ -50,7 +47,7 @@ class="left-image" alt="New Image"/>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 [LiangTianhui]. 保留所有权利。</p >
+        <p>&copy; 2024 [LiangTianhui]. 保留所有权利。</p>
     </footer>
 </body>
 
