--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <h2>Self Introduction</h2>
             <img src="hi.JPG" class="intro-image" alt="Introduction Image"/>
             <p class="intro-paragraph">     Hi there 👋🏻</p>
-            <p class="intro-paragraph">I'm Liang Tianhui, originally from Shandong Province.Born under the Capricorn ♑️ sign in January 2001, I'm an INTJ who's working hard to soften my 'J' tendencies.Currently, I'm enrolled in the MSCCT+ program at Lingnan University in Hong Kong.</p>
-            <p class="intro-paragraph">I have a wide range of hobbies, but none of them are mastered 😅. These hobbies include but are not limited to taking eight piano 🎹 lessons, learning cello 🎻 for one summer vacation, studying calligraphy 🖊️ for half a month, and taking only one swimming 🏊 lesson (because the gym owner absconded). However, my love for singer Shang Wenjie is long-lasting. Just as my username is "ShangWenjiedegou", I hope everyone can support singer Shang Wenjie a lot!Thank you！</p>
+            <p class="intro-paragraph">I'm Liang Tianhui.Born in January 2001, I am a Capricorn and an INTJ who's striving to reduce my 'J' value.Currently, I'm studying for the MScCT+ major at Lingnan University in Hong Kong.</p>
+            <p class="intro-paragraph">I have a wide range of hobbies, but none of them are mastered 😅. These hobbies include but are not limited to taking eight piano 🎹 lessons, learning cello 🎻 for one summer vacation, studying calligraphy 🖊️ for half a month, and taking only one swimming 🏊 lesson (because the gym owner runs away). However, my love for singer Shang Wenjie is long-lasting. Just as my username is "ShangWenjiedegou", I hope everyone can support singer Shang Wenjie a lot!Thank you！</p>
         </section>
         <section>
             <h2>Personal Label</h2>
@@ -47,7 +47,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 [LiangTianhui]. 保留所有权利。</p>
+        <p>&copy; 2024 [梁天惠]. 保留所有权利。</p>
     </footer>
 </body>
 
