--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Welcome to my page!</h1>
+        <h1>Welcome to my homepage!</h1>
     </header>
     <main>
         <section>
